# amari-project-to-fork

./: .env.example  .gitignore  Demo-Invoice-PackingList_1.xlsx  README.md  docker-compose.yml  project_round_full_stack_applied_ai.md
.github/workflows/: cd-deploy.yml  cd-rollback.yml
backend/: Dockerfile  evaluation.py  main.py  pyproject.toml
backend/app/: logging_config.py  main.py  metrics.py  prompts.py  schemas.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/services/: extractor.py
backend/app/utils/: excel_parser.py  image_converter.py
backend/tests/: test_excel.py  test_full_system.py  test_llm.py  test_pdf.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DocViewer.tsx  ExtractionForm.tsx  FileUpload.tsx
infrastructure/: deploy-to-cloud-run.sh  setup-gcp.sh  setup-workload-identity.sh
infrastructure/monitoring/: setup-monitoring.sh
