[project]
name = "amari-project-to-fork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "fastapi>=0.128.0",
    "instructor>=1.14.1",
    "markitdown>=0.0.2",
    "numpy<2",
    "openai>=2.15.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pydantic-settings>=2.12.0",
    "pypdf2>=3.0.1",
    "pytest>=9.0.2",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "tabulate>=0.9.0",
    "uvicorn>=0.40.0",
]
